--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,6 @@ ENV = 'development'
 VUE_APP_BASE_API = '/api'
 
 
-VUE_APP_HOST = 'http://cms.test'
+VUE_APP_HOST = 'http://adminapi.test/api'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
