--- a/.env.development
+++ b/.env.development
@@ -2,9 +2,10 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = '/api'
+VUE_APP_BASE_API = '/api'#
 
 
+#VUE_APP_HOST = 'http://system.pltrue.top/api'
 VUE_APP_HOST = 'http://adminapi.test/api'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
