--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,7 @@ ENV = 'production'
 # base api
 VUE_APP_BASE_API = '/api'
 
-VUE_APP_HOST = 'http://adminapi.test/api'
+
+VUE_APP_HOST = 'http://system.pltrue.top/api'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
