--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,6 @@ VUE_APP_BASE_API = '/api'#
 
 
 #VUE_APP_HOST = 'http://system.pltrue.top/api'
-VUE_APP_HOST = 'http://adminapi.test/api'
+VUE_APP_HOST = 'http://127.0.0.1:9091'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
