--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,6 @@ ENV = 'production'
 VUE_APP_BASE_API = '/api'
 
 
-VUE_APP_HOST = 'http://system.pltrue.top/api'
-
+#VUE_APP_HOST = 'http://system.pltrue.top/api'
+VUE_APP_HOST = 'http://adminapi.test/api'
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
