终端功能增加验证

--- a/.env.development
+++ b/.env.development
@@ -7,5 +7,6 @@ VUE_APP_BASE_API = '/api'#
 
 #VUE_APP_HOST = 'http://system.pltrue.top/api'
 VUE_APP_HOST = 'http://adminapi.test/api'
+VUE_APP_WS_HOST = '127.0.0.1'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
