--- a/.env.production
+++ b/.env.production
@@ -8,3 +8,4 @@ VUE_APP_BASE_API = '/api'
 VUE_APP_HOST = 'http://system.pltrue.top/api'
 #VUE_APP_HOST = 'http://adminapi.test/api'
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+VUE_APP_WS_HOST = '120.79.241.204:4001'
