--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
+    "node-pty": "^0.10.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "particles.js": "^2.0.0",
@@ -49,7 +50,11 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "ws": "^5.2.2",
+    "xlsx": "0.14.1",
+    "xterm": "^4.12.0",
+    "xterm-addon-attach": "^0.6.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
