--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "element-ui": "2.13.2",
     "file-saver": "2.0.1",
     "font-awesome": "^4.7.0",
+    "form-gen-parser": "^1.0.3",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
@@ -75,7 +76,7 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
-    "plop": "2.3.0",
+    "plop": "^2.3.0",
     "runjs": "4.3.2",
     "sass": "1.26.2",
     "sass-loader": "8.0.2",
