前端代码更新提交

--- a/.env.development
+++ b/.env.development
@@ -9,4 +9,8 @@ VUE_APP_BASE_API = '/api'#
 VUE_APP_HOST = 'http://adminapi.test/api'
 VUE_APP_WS_HOST = '127.0.0.1:4001'
 
+VUE_APP_WB_CLIENT_ID = '1949419161'
+VUE_APP_WB_REDIRECT_URL = 'http://adminapi.test/api/auth/weiboCallBack'
+
+
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
