调整一些样式和配置

--- a/.env.development
+++ b/.env.development
@@ -12,5 +12,8 @@ VUE_APP_WS_HOST = '127.0.0.1:4001'
 VUE_APP_WB_CLIENT_ID = '1949419161'
 VUE_APP_WB_REDIRECT_URL = 'http://adminapi.test/api/auth/weiboCallBack'
 
+VUE_APP_SYSTEM_NAME='laravel-casbin-admin'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
+
