--- a/.env.production
+++ b/.env.production
@@ -9,6 +9,8 @@ VUE_APP_HOST = 'http://system.pltrue.top/api'
 #VUE_APP_HOST = 'http://adminapi.test/api'
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
 VUE_APP_WS_HOST = '120.79.241.204:4001'
+VUE_APP_SYSTEM_NAME='laravel-casbin-admin'
 
 VUE_APP_WB_CLIENT_ID = '3780352867'
 VUE_APP_WB_REDIRECT_URL = 'http://system.pltrue.top/api/auth/weiboCallBack'
+
