--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-fontawesome-elementui-icon-picker": "^0.1.9",
+    "vue-i18n": "^9.1.7",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
