update(package.json/* e leelement-ui版本依赖更新)

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VUE_APP_BASE_API = '/api'#
 
 
 #VUE_APP_HOST = 'http://system.pltrue.top/api'
-VUE_APP_HOST = 'http://adminapi.test/api'
+VUE_APP_HOST = ''
 VUE_APP_WS_HOST = '127.0.0.1:4001'
 
 VUE_APP_WB_CLIENT_ID = '1949419161'
